Fix manual text alignment - replace inline styles with proper CSS classes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -580,6 +580,23 @@ a {
   }
 }
 
+// Utility Classes
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
 // Enhanced project cards
 .project-card {
   background: white;
